--- a/Projet/NuclearAlert/src/Makefile
+++ b/Projet/NuclearAlert/src/Makefile
@@ -1,8 +1,8 @@
-include Make_linux.inc
-#include Make_msys2.inc
+#include Make_linux.inc
+include Make_msys2.inc
 #include Make_osx.inc
 
-CXXFLAGS = -std=c++20 `sdl2-config --cflags`
+CXXFLAGS = -std=c++17 `sdl2-config --cflags`
 ifdef DEBUG
 CXXFLAGS += -g -O0 -Wall -fbounds-check -pedantic -D_GLIBCXX_DEBUG -DDEBUG
 else
